# deploybot

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  readme.md
config/env/: .env.staging
config/pki/any/: thomas.pub.pem  user.pub.pem
scripts/: docker_build  pki_tar_list_create
src/: handlers.rs  main.rs
src/api/: deploys.rs  mod.rs  ping.rs
src/lib/: deploy.rs  docker.rs  fs.rs  git.rs  kube.rs  kube_files_apply.rs  kube_files_rewriter.rs  kube_resource.rs  mod.rs  pki.rs  runner.rs  slack.rs  watch.rs
src/schemas/: deploy.rs  mod.rs  ping.rs  root.rs
