[package]
name = "deploybot"
version = "0.1.1"
authors = ["Sanjay Kapoor <sanjay@jarna.com>"]
edition = "2018"

[profile.dev]
opt-level = 0
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9"
actix-rt = "2.10.0"
base64 = "0.22.1"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.13"
dotenv = "0.15.0"
env_logger = "0.11.5"
git2 = "0.19"
juniper = "0.16"
log = "0.4"
openssl = "0.10"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
signal-hook = "0.3"
slog = "2.7.0"
slog-json = "2.6.1"
slog-term = "2.9.1"
toml = "0.8.19"
ulid = "1.1.3"
